UI correction mobile view

--- a/pokedex/src/app/poke-theme/poke-theme.component.less
+++ b/pokedex/src/app/poke-theme/poke-theme.component.less
@@ -16,7 +16,7 @@ body{
 .scroll-to-top-btn {
   position: fixed;
   bottom: 10px;
-  right: 10px;
+  right: 30px;
   z-index: 99;
   border: none;
   outline: none;
